crate name, docs, and tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ rust-version = "1.75"
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/andreivcodes/allure-rs"
 homepage = "https://github.com/andreivcodes/allure-rs"
-documentation = "https://docs.rs/allure"
+documentation = "https://docs.rs/allure-rs"
 description = "A comprehensive Rust library for generating Allure test reports"
 keywords = ["allure", "testing", "report", "test-framework"]
 categories = ["development-tools::testing"]
