--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,11 +32,12 @@ jobs:
       - name: Run tests
         run: cargo test --all-features
 
-      - name: Dry run publish
+      - name: Verify packaging (allure-core only)
         run: |
+          # Note: Can only dry-run allure-core before initial publish
+          # because allure-macros and allure-rs depend on allure-core
+          # which doesn't exist on crates.io yet
           cargo publish --dry-run -p allure-core
-          cargo publish --dry-run -p allure-macros
-          cargo publish --dry-run -p allure
 
       - name: Publish allure-core
         run: cargo publish -p allure-core --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
@@ -50,8 +51,8 @@ jobs:
       - name: Wait for crates.io index
         run: sleep 30
 
-      - name: Publish allure
-        run: cargo publish -p allure --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
+      - name: Publish allure-rs
+        run: cargo publish -p allure-rs --token ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
   release:
     name: Create GitHub Release
